--- a/style.css
+++ b/style.css
@@ -149,56 +149,37 @@ h2 {
 
 /* ! for the error */
 .popup {
-    width: 400px;
-    background: #fffdfd;
-    border-radius: 6px;
-    position: absolute;
-    top: 0;
-    left: 50%;
-    transform: translate(-50%, -50%) scale(0.1);
-    text-align: center;
-    padding: 0 30px 30px;
-    color: #333;
-    visibility: hidden;
-    transition: transform 0.4s, top 0.4s;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
-
+    margin-bottom: 12px;
+    color: red;
+    display: none;
 }
 
 .open-popup {
-    visibility: visible;
-    top: 50%;
-    transform: translate(-50%, -50%) scale(1);
+    display: block;
+    animation: vibrate 0.5s;
 }
 
-.popup img {
-    width: 100px;
-    margin-top: -50px;
-    border-radius: 50%;
-    background: #fff;
-}
+@keyframes vibrate {
+    0% {
+        transform: translateX(0);
+    }
 
-.popup h2 {
-    font-size: 38px;
-    font-weight: 500;
-    margin: 30px 0 10px;
-    color: #222;
-}
+    25% {
+        transform: translateX(-5px);
+    }
 
-.popup button {
-    width: 100%;
-    margin-top: 50px;
-    padding: 10px 0;
-    background: #9900ff;
-    color: #fff;
-    border: navajowhite;
-    outline: none;
-    cursor: pointer;
-    border-radius: 4px;
-    font-size: 18px;
-    box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2);
-}
+    50% {
+        transform: translateX(5px);
+    }
 
+    75% {
+        transform: translateX(-5px);
+    }
+
+    100% {
+        transform: translateX(5px);
+    }
+}
 /** footer content */
   
   footer {
