--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 
 .container {
     width: 100%;
-    min-height: 95vh;
+    min-height: 90vh;
     background: linear-gradient(135deg, #c300ff, #ff00dd);
     padding: 10px;
 }
@@ -202,4 +202,62 @@ h2 {
   .footer-content a {
     color: #c300ff;
   }
+
+  .footer-content .faqs {
+    padding: 7px 14px;
+    border: none;
+    outline: none;
+    float: right;
+    border-radius: 3px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    cursor: pointer ;
+  }
+
+  .container_faqs {
+    width: 500px;
+    height: 200px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background: #fff;
+    box-shadow: 2px 2px 20px 2px rgba(0,0,0,0.2);
+    position: absolute;
+    border-radius: 5px;
+    top: 33%;
+    left: 33%;
+    visibility: hidden;
+  }
+
+  .container_faqs p {
+    color: red;
+  }
+
+  .container_faqs button {
+    padding: 7px 14px;
+    border: none;
+    outline: none;
+    float: right;
+    border-radius: 3px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    cursor: pointer ;
+  }
+
+  .highglight {
+    background: yellow;
+  }
   
+  @media (max-width: 768px) {
+    .footer-content {
+        flex-direction: column;
+    }
+
+    .container_faqs {
+        width: 100%;
+        height: 30%;
+        left: 0;
+        top: 30%;
+    }
+  }
